GNOME Bugzilla – Bug 735971
qtdemux: avdec_mjpeg does not get autoplugged for mjpeg in mov container
Last modified: 2014-09-03 22:10:41 UTC
I have a mjpeg in mov file. When I try to use decodebin, I get the following error [root@localhost ~]# gst-launch-1.0 filesrc location=out.mov ! decodebin ! fakesink Setting pipeline to PAUSED ... Pipeline is PREROLLING ... Missing element: JPEG decoder But decoding works if I individually specify the components [root@localhost~]# gst-launch-1.0 filesrc location=out.mov ! qtdemux ! jpegparse ! avdec_mjpeg ! fakesink Setting pipeline to PAUSED ... Pipeline is PREROLLING ... Redistribute latency... Pipeline is PREROLLED ... Setting pipeline to PLAYING ... New clock: GstSystemClock Got EOS from element "pipeline0". Execution ended after 0:00:00.232201893
Possibly the parser is needed, but jpegparse is not ranked. I think this works fine if you try with jpegdec from gst-plugins-good (depends on libjpeg-turbo), it's doing it's own parsing.
Here is the test file https://drive.google.com/file/d/0BzAa6BlwN3-cOG1MUGdTU1F0M1E/edit?usp=sharing
Thanks for the bug report and the test file, this should fix it: commit 884f81ba281d6e0c20a4a930c78f22afba0845e6 Author: Tim-Philipp Müller <tim@centricular.com> Date: Wed Sep 3 23:06:53 2014 +0100 qtdemux: mark jpeg and png as parsed so avdec_mjpeg can be used too https://bugzilla.gnome.org/show_bug.cgi?id=735971 (and it works fine with jpegdec regardless.)