qtdemux: mark jpeg and png as parsed so avdec_mjpeg can be used too

https://bugzilla.gnome.org/show_bug.cgi?id=735971